--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "neutrino-preset-react": "^2.1.0"
   },
   "dependencies": {
+    "bulma": "^0.3.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
