Navigate to searchResults using Google's workflow

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bulma": "^0.3.1",
+    "feathers-client": "^1.9.0",
     "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
