--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "dependencies": {
     "bulma": "^0.3.1",
     "feathers-client": "^1.9.0",
+    "feathers-hooks": "^1.7.1",
+    "feathers-socketio": "^1.4.2",
     "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io-client": "^1.7.2"
   }
 }
