--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "feathers-hooks": "^1.7.1",
     "feathers-socketio": "^1.4.2",
     "font-awesome": "^4.7.0",
+    "pdf.js": "^0.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-pdf-js": "^1.0.32",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
