--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "feathers-hooks": "^1.7.1",
     "feathers-socketio": "^1.4.2",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "pdf.js": "^0.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
