--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "neutrino-preset-react": "^2.1.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "bulma": "^0.3.1",
     "feathers-client": "^1.9.0",
     "feathers-hooks": "^1.7.1",
